syntax = "proto3";

package item.v1;

option go_package = "monolith-divided-to-microservices/app/services/item/sdk/proto/item/v1;itempb";

import "google/protobuf/timestamp.proto";

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  string category_id = 4;
  string country_id = 5;
  int32 stock = 6;
  double price = 7;
  google.protobuf.Timestamp added_at = 8;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message CreateItemRequest {
  string name = 1;
  string description = 2;
  string category_id = 3;
  string country_id = 4;
  int32 stock = 5;
  double price = 6;
}

message CreateItemResponse {
  Item item = 1;
}

message UpdateItemRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string category_id = 4;
  string country_id = 5;
  int32 stock = 6;
  double price = 7;
}

message UpdateItemResponse {
  Item item = 1;
}

message DeleteItemRequest {
  string id = 1;
}

message DeleteItemResponse {
  bool success = 1;
}

service ItemService {
  rpc GetItem(GetItemRequest) returns (GetItemResponse);
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse);
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse);
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse);
}